# re-mind

./: .env.example  .gitignore  AGENTS.md  README.md  justfile  vapi-system-prompt.md  vapi-tool-descriptions.md
.opencode/agents/: verify.md
.opencode/commands/: verify.md
.opencode/skills/check/: SKILL.md
api/: README.md  pyproject.toml
api/app/: __init__.py  database.py  main.py
api/app/events/: __init__.py  broadcaster.py  router.py
api/app/reminders/: __init__.py  repository.py  router.py  schemas.py
api/app/vapi/: __init__.py  router.py  schemas.py
api/app/vapi/tools/: __init__.py  check_reminder_conflicts.py  create_reminder.py  delete_reminder.py  get_reminder.py  helpers.py  list_reminders.py  update_reminder.py
api/tests/: test_health.py  test_reminders.py  test_vapi_webhook.py
docs-site/: README.md  astro.config.mjs
docs-site/src/components/: Hero.astro
docs-site/src/content/docs/: architecture.mdx  backend.mdx  frontend.mdx  getting-started.mdx  index.mdx  realtime.mdx  voice-assistant.mdx
docs-site/src/content/docs/operations/: local-development.md
docs-site/src/content/docs/reference/: api.md  environment.md
docs-site/src/styles/: docs-home.css  gruvbox.css
web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: AddReminder.tsx  RemindersList.tsx
web/src/features/reminders/: api.ts  helpers.ts  types.ts
web/src/features/voice/: helpers.ts  useVapiCall.ts
web/src/lib/: api-client.generated.ts  utils.ts
